{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 329,
  "lineage": "14d11c53-a768-e1be-80f8-0c0d1f0ac2b5",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06862a6ef1260bb02",
            "arn": "arn:aws:ec2:ap-southeast-2:216659404274:instance/i-03323874ec1e11cd9",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "dockerzon-instance-profile",
            "id": "i-03323874ec1e11cd9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-terraform-vpc-provisioning",
            "monitoring": false,
            "primary_network_interface_id": "eni-090dad32793d44e39",
            "private_dns": "ip-10-0-5-33.ap-southeast-2.compute.internal",
            "private_ip": "10.0.5.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b6527b4ad39e246f",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-09c9cf9cea68059ae"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0725512bf6bf0e71f",
            "tags": {
              "Name": "dockerzon-00"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09c9cf9cea68059ae"
            ]
          },
          "dependencies": [
            "aws_subnet.private-subnet-2a",
            "aws_subnet.private-subnet-2b",
            "aws_vpc.dockerzon-ecs-vpc",
            "module.instances.aws_iam_instance_profile.instance-profile",
            "module.instances.aws_iam_role.instance-profile-role",
            "module.instances.aws_security_group.app-instance-sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06862a6ef1260bb02",
            "arn": "arn:aws:ec2:ap-southeast-2:216659404274:instance/i-0a628359a1d883045",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "dockerzon-instance-profile",
            "id": "i-0a628359a1d883045",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-terraform-vpc-provisioning",
            "monitoring": false,
            "primary_network_interface_id": "eni-0ddfbb9b8baad4245",
            "private_dns": "ip-10-0-4-16.ap-southeast-2.compute.internal",
            "private_ip": "10.0.4.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0dc6f715f178962e8",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-09c9cf9cea68059ae"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-048c4419941a94056",
            "tags": {
              "Name": "dockerzon-01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09c9cf9cea68059ae"
            ]
          },
          "dependencies": [
            "aws_subnet.private-subnet-2a",
            "aws_subnet.private-subnet-2b",
            "aws_vpc.dockerzon-ecs-vpc",
            "module.instances.aws_iam_instance_profile.instance-profile",
            "module.instances.aws_iam_role.instance-profile-role",
            "module.instances.aws_security_group.app-instance-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dockerzon-ecs-vpc-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-042ca083a8dba5271",
            "owner_id": "216659404274",
            "tags": {
              "Name": "dockerzon-ecs-vpc-igw"
            },
            "vpc_id": "vpc-00e91793ea0bde775"
          },
          "dependencies": [
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "dockerzon-lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:loadbalancer/app/dockerzon-lb-terraform/dac3a2a7d79e2bae",
            "arn_suffix": "app/dockerzon-lb-terraform/dac3a2a7d79e2bae",
            "dns_name": "dockerzon-lb-terraform-1109743799.ap-southeast-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:loadbalancer/app/dockerzon-lb-terraform/dac3a2a7d79e2bae",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dockerzon-lb-terraform",
            "security_groups": [
              "sg-08e07338f813e504c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00e143a0823cc18e9"
              },
              {
                "subnet_id": "subnet-085c6c7ef7772f8da"
              }
            ],
            "subnets": [
              "subnet-00e143a0823cc18e9",
              "subnet-085c6c7ef7772f8da"
            ],
            "tags": {
              "Name": "dockerzon-lb-terraform"
            },
            "vpc_id": "vpc-00e91793ea0bde775",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_subnet.public-subnet-2a",
            "aws_subnet.public-subnet-2b",
            "aws_vpc.dockerzon-ecs-vpc",
            "module.alb.aws_security_group.dockerzon-lb-sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dockerzon-lb-listner",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:listener/app/dockerzon-lb-terraform/dac3a2a7d79e2bae/11c0747cf9248c70",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:targetgroup/dockerzon-lb-tg/9fccbee2646b9c59",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:listener/app/dockerzon-lb-terraform/dac3a2a7d79e2bae/11c0747cf9248c70",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:loadbalancer/app/dockerzon-lb-terraform/dac3a2a7d79e2bae",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_subnet.public-subnet-2a",
            "aws_subnet.public-subnet-2b",
            "aws_vpc.dockerzon-ecs-vpc",
            "module.alb.aws_lb.dockerzon-lb",
            "module.alb.aws_lb_target_group.dockerzon-lb-tg",
            "module.alb.aws_security_group.dockerzon-lb-sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dockerzon-lb-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:targetgroup/dockerzon-lb-tg/9fccbee2646b9c59",
            "arn_suffix": "targetgroup/dockerzon-lb-tg/9fccbee2646b9c59",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 6,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:targetgroup/dockerzon-lb-tg/9fccbee2646b9c59",
            "lambda_multi_value_headers_enabled": false,
            "name": "dockerzon-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dockerzon-lb-tg-terraform"
            },
            "target_type": "instance",
            "vpc_id": "vpc-00e91793ea0bde775"
          },
          "dependencies": [
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dockerzon-ecs-vpc-public-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b0961c4f5681d4a8",
            "owner_id": "216659404274",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-042ca083a8dba5271",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-042ca083a8dba5271",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dockerzon-ecs-vpc-public-route"
            },
            "vpc_id": "vpc-00e91793ea0bde775"
          },
          "dependencies": [
            "aws_internet_gateway.dockerzon-ecs-vpc-igw",
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2a-route-link",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bd3159804926e76",
            "route_table_id": "rtb-0b0961c4f5681d4a8",
            "subnet_id": "subnet-085c6c7ef7772f8da"
          },
          "dependencies": [
            "aws_internet_gateway.dockerzon-ecs-vpc-igw",
            "aws_route_table.dockerzon-ecs-vpc-public-route",
            "aws_subnet.public-subnet-2a",
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2b-route-link",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0813a714db27379d4",
            "route_table_id": "rtb-0b0961c4f5681d4a8",
            "subnet_id": "subnet-00e143a0823cc18e9"
          },
          "dependencies": [
            "aws_internet_gateway.dockerzon-ecs-vpc-igw",
            "aws_route_table.dockerzon-ecs-vpc-public-route",
            "aws_subnet.public-subnet-2b",
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-instance-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:216659404274:security-group/sg-09c9cf9cea68059ae",
            "description": "Flow traffic to alb",
            "egress": [],
            "id": "sg-09c9cf9cea68059ae",
            "ingress": [],
            "name": "app-instance-sg-terraform",
            "name_prefix": null,
            "owner_id": "216659404274",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-instance-sg-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e91793ea0bde775"
          },
          "dependencies": [
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dockerzon-lb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:216659404274:security-group/sg-08e07338f813e504c",
            "description": "Dockerzon load balancer security group",
            "egress": [],
            "id": "sg-08e07338f813e504c",
            "ingress": [],
            "name": "dockerzon-lb-sg",
            "name_prefix": null,
            "owner_id": "216659404274",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dockerzon-lb-sg-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e91793ea0bde775"
          },
          "dependencies": [
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-traffic-from-alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-2416408165",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09c9cf9cea68059ae",
            "self": false,
            "source_security_group_id": "sg-08e07338f813e504c",
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_vpc.dockerzon-ecs-vpc",
            "module.alb.aws_security_group.dockerzon-lb-sg",
            "module.instances.aws_security_group.app-instance-sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-traffic-in",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-2349042595",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08e07338f813e504c",
            "self": false,
            "source_security_group_id": "sg-09c9cf9cea68059ae",
            "to_port": 80,
            "type": "egress"
          },
          "dependencies": [
            "aws_vpc.dockerzon-ecs-vpc",
            "module.alb.aws_security_group.dockerzon-lb-sg",
            "module.instances.aws_security_group.app-instance-sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-traffic-out-to-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-4229621582",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08e07338f813e504c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_vpc.dockerzon-ecs-vpc",
            "module.alb.aws_security_group.dockerzon-lb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:216659404274:subnet/subnet-0725512bf6bf0e71f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0725512bf6bf0e71f",
            "map_public_ip_on_launch": false,
            "owner_id": "216659404274",
            "tags": {
              "Name": "10.0.5.0/ap-southeast-2a"
            },
            "vpc_id": "vpc-00e91793ea0bde775"
          },
          "dependencies": [
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:216659404274:subnet/subnet-048c4419941a94056",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-048c4419941a94056",
            "map_public_ip_on_launch": false,
            "owner_id": "216659404274",
            "tags": {
              "Name": "10.0.4.0/ap-southeast-2b"
            },
            "vpc_id": "vpc-00e91793ea0bde775"
          },
          "dependencies": [
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:216659404274:subnet/subnet-085c6c7ef7772f8da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-085c6c7ef7772f8da",
            "map_public_ip_on_launch": true,
            "owner_id": "216659404274",
            "tags": {
              "Name": "10.0.1.0/ap-southeast-2a"
            },
            "vpc_id": "vpc-00e91793ea0bde775"
          },
          "dependencies": [
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:216659404274:subnet/subnet-00e143a0823cc18e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-00e143a0823cc18e9",
            "map_public_ip_on_launch": true,
            "owner_id": "216659404274",
            "tags": {
              "Name": "10.0.3.0/ap-southeast-2b"
            },
            "vpc_id": "vpc-00e91793ea0bde775"
          },
          "dependencies": [
            "aws_vpc.dockerzon-ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dockerzon-ecs-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:216659404274:vpc/vpc-00e91793ea0bde775",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-037c240ea9c47994e",
            "default_route_table_id": "rtb-0f87b0fcb479fd6af",
            "default_security_group_id": "sg-062a8324b92382bb7",
            "dhcp_options_id": "dopt-77e7ba10",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00e91793ea0bde775",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f87b0fcb479fd6af",
            "owner_id": "216659404274",
            "tags": {
              "Name": "dockerzon-ecs-vpc",
              "app": "dockerzon-ecs",
              "env": "dev"
            }
          }
        }
      ]
    }
  ]
}